Get ready for publish

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
-name = "log"
+name = "minilog"
 version = "0.1.0"
 edition = "2021"
+authors = ["Bay"]
+description = "Zero-dependency logging library."
+repository = "https://github.com/zX3no/log"
+readme = "README.md"
+license = "CC0-1.0"
 
 [dependencies]
 
