removed strip feature and added profile and info

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,7 @@ license = "CC0-1.0"
 [dependencies]
 
 [features]
-strip = []   # Strip all logging and profiling.
-
-info = []  # Unused.
-warn = []  # Allows warnings and errors.
-error = [] # Only allows errors. 
+profile = [] # Enable profiling.
+info = []    # Show all logging.
+warn = []    # Allows warnings and errors.
+error = []   # Only allows errors.
